--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -833,7 +833,7 @@
   .three-one-column .column1,
   .two-one-column .column1,
   .two-one-one-column .column1,
-  :not(#gridsidebar) .single-column .column1 {
+  .gridcontent:not(#gridsidebar) .single-column .column1 {
     .gridbox {
       &.with-img {
         &:hover {
