--- a/less/dropdowns.less
+++ b/less/dropdowns.less
@@ -1,33 +1,32 @@
 //
 // Dropdown menus
 // --------------------------------------------------
-
-
 // Dropdown arrow/caret
+
 .caret {
   display: inline-block;
   width: 0;
   height: 0;
   margin-left: 2px;
   vertical-align: middle;
-  border-top:   @caret-width-base dashed;
-  border-top:   @caret-width-base solid ~"\9"; // IE8
+  border-top: @caret-width-base dashed;
+  border-top: @caret-width-base solid ~"\9"; // IE8
   border-right: @caret-width-base solid transparent;
-  border-left:  @caret-width-base solid transparent;
+  border-left: @caret-width-base solid transparent;
 }
-
 // The dropdown wrapper (div)
-.dropup,
-.dropdown {
+
+.dropdown,
+.dropup {
   position: relative;
 }
-
 // Prevent the focus on the dropdown toggle when closing dropdowns
-.dropdown-toggle:focus {
-  outline: 0;
-}
-
+// Hiddden by KU
+// .dropdown-toggle:focus {
+//   outline: 0;
+// }
 // The dropdown menu (ul)
+
 .dropdown-menu {
   position: absolute;
   top: 100%;
@@ -48,7 +47,6 @@
   border-radius: @border-radius-base;
   .box-shadow(0 6px 12px rgba(0,0,0,.175));
   background-clip: padding-box;
-
   // Aligns the dropdown menu to right
   //
   // Deprecated as of 3.1.0 in favor of `.dropdown-menu-[dir]`
@@ -56,12 +54,10 @@
     right: 0;
     left: auto;
   }
-
   // Dividers (basically an hr) within the dropdown
   .divider {
     .nav-divider(@dropdown-divider-bg);
   }
-
   // Links within the dropdown menu
   > li > a {
     display: block;
@@ -74,43 +70,41 @@
     white-space: nowrap; // prevent links from randomly breaking onto new lines
   }
 }
-
 // Hover/Focus state
+
 .dropdown-menu > li > a {
-  &:hover,
-  &:focus {
+  &:focus,
+  &:hover {
     text-decoration: none;
     color: @dropdown-link-hover-color;
     background-color: @dropdown-link-hover-bg;
   }
 }
-
 // Active state
+
 .dropdown-menu > .active > a {
   &,
-  &:hover,
-  &:focus {
+  &:focus,
+  &:hover {
     color: @dropdown-link-active-color;
     text-decoration: none;
     outline: 0;
     background-color: @dropdown-link-active-bg;
   }
 }
-
 // Disabled state
 //
 // Gray out text and ensure the hover/focus state remains gray
 
 .dropdown-menu > .disabled > a {
   &,
-  &:hover,
-  &:focus {
+  &:focus,
+  &:hover {
     color: @dropdown-link-disabled-color;
   }
-
   // Nuke hover/focus effects
-  &:hover,
-  &:focus {
+  &:focus,
+  &:hover {
     text-decoration: none;
     background-color: transparent;
     background-image: none; // Remove CSS gradient
@@ -118,24 +112,23 @@
     cursor: @cursor-disabled;
   }
 }
-
 // Open state for the dropdown
+
 .open {
   // Show the menu
   > .dropdown-menu {
     display: block;
   }
-
   // Remove the outline when :focus is triggered
   > a {
     outline: 0;
   }
 }
-
 // Menu positioning
 //
 // Add extra class to `.dropdown-menu` to flip the alignment of the dropdown
 // menu with the parent.
+
 .dropdown-menu-right {
   left: auto; // Reset the default from `.dropdown-menu`
   right: 0;
@@ -146,12 +139,13 @@
 //
 // This is only for left-aligning a dropdown menu within a `.navbar-right` or
 // `.pull-right` nav component.
+
 .dropdown-menu-left {
   left: 0;
   right: auto;
 }
-
 // Dropdown section headers
+
 .dropdown-header {
   display: block;
   padding: 3px 20px;
@@ -160,8 +154,8 @@
   color: @dropdown-header-color;
   white-space: nowrap; // as with > li > a
 }
-
 // Backdrop to catch body clicks on mobile, etc.
+
 .dropdown-backdrop {
   position: fixed;
   left: 0;
@@ -170,13 +164,12 @@
   top: 0;
   z-index: (@zindex-dropdown - 10);
 }
-
 // Right aligned dropdowns
+
 .pull-right > .dropdown-menu {
   right: 0;
   left: auto;
 }
-
 // Allow for dropdowns to go bottom up (aka, dropup-menu)
 //
 // Just add .dropup after the standard .dropdown class and you're set, bro.
@@ -198,12 +191,9 @@
     margin-bottom: 2px;
   }
 }
-
-
 // Component alignment
 //
 // Reiterate per navbar.less and the modified component alignment there.
-
 @media (min-width: @grid-float-breakpoint) {
   .navbar-right {
     .dropdown-menu {
