--- a/less/navbar.less
+++ b/less/navbar.less
@@ -836,24 +836,18 @@
     @media (min-width: @screen-xs-max) {
       width: 60%;
     }
-    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+    @media (min-width: @screen-sm) and (max-width: @screen-sm-max) {
       width: 36%;
     }
-    @media (min-width: @screen-md-min) {
+    @media (min-width: @screen-md) {
       left: 24px;
-      width: 25%;
+      width: 27%;
     }
     // English version
     html:lang(en) & {
       background-image: url("https://bootstrap.secure.ku.dk/img/toplogo_uk.svg");
       width: 75%;
       left: @margin20;
-      // @media (min-width: @screen-xs-max) {
-      //   width: 60%;
-      // }
-      // @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
-      //   width: 36%;
-      // }
       @media (min-width: @screen-md-min) {
         width: 28%;
       }
