--- a/less/ku-editor-overrides.less
+++ b/less/ku-editor-overrides.less
@@ -13,6 +13,10 @@
     width: 100%;
     max-width: none;
     background-color: @white-color;
+
+    img {
+      .img-responsive;
+    }
 }
   blockquote {
     float: right;
