--- a/less/ku-leftmenu.less
+++ b/less/ku-leftmenu.less
@@ -146,7 +146,7 @@
       a {
         color: @gray-dark;
         font-size: 1em;
-        padding: 3px 5px 3px 15px;
+        padding: 0 5px 3px 15px;
         position: relative;
         display: inline-block;
         vertical-align: top;
@@ -330,7 +330,7 @@
               content: "";
               height: 5px;
               width: 5px;
-              top: 8px;
+              top: 9px;
               padding: 0;
               border: 0;
               border-radius: 0;
