--- a/less/ku-datetimepicker.less
+++ b/less/ku-datetimepicker.less
@@ -456,6 +456,10 @@
 .datepicker-days {
   .table-striped {
     .day {
+      &.today {
+        @today-bg: lighten(orange, 30%);
+        .button-variant(#000, @today-bg, darken(@today-bg, 20%));
+      }
       &.active {
         // Selected date
         font-weight: 700;
