--- a/less/ku-leftmenu.less
+++ b/less/ku-leftmenu.less
@@ -146,7 +146,7 @@
       a {
         color: @gray-dark;
         font-size: 1em;
-        padding: 0 5px 3px 15px;
+        padding: 3px 5px 3px 15px;
         position: relative;
         display: inline-block;
         vertical-align: top;
@@ -232,7 +232,7 @@
         &::after {
           content: '';
           position: absolute;
-          top: 5px;
+          top: 7px;
           left: 0;
           width: 10px;
           height: 11px;
@@ -243,7 +243,7 @@
         &::before {
           .icon;
           position: absolute;
-          top: 6px;
+          top: 8px;
           left: 1px;
           font-size: 9px;
           // height: 10px;
