--- a/less/ku-datetimepicker.less
+++ b/less/ku-datetimepicker.less
@@ -457,6 +457,7 @@
   .table-striped {
     .day {
       &.today {
+        // Today's date
         @today-bg: lighten(orange, 30%);
         .button-variant(#000, @today-bg, darken(@today-bg, 20%));
       }
