--- a/less/ku-misc.less
+++ b/less/ku-misc.less
@@ -193,6 +193,12 @@ nav {
   > .row {
     margin: 0;
   }
+
+  .input-group {
+    .input-group-addon {
+      cursor: pointer;
+    }
+  }
 }
 @media (min-width: @screen-sm) {
   // Utility icon
