Removing obsoltet img classes

--- a/less/thumbnails.less
+++ b/less/thumbnails.less
@@ -105,7 +105,7 @@ figcaption {
 }
 
 .fritekst_over_img, .uden-boks-top {
-  // Hack to hide titles i rightboxes
-  position: absolute;
-  margin-top: -39px;
+  // We no longer support this!
+  // position: absolute;
+  // margin-top: -39px;
 }
