--- a/docs/assets/css/doctypes/publikationsliste.css
+++ b/docs/assets/css/doctypes/publikationsliste.css
@@ -149,14 +149,27 @@ div.rendering p.type, ol.portal_list>li {
 }
 
 .quick_nav {
-  margin: 5px 0 15px 0!important;
+  margin: 0 0 15px 0!important;
 }
 
 .quick_nav, .portal_navigator_result {
   float: left;
+  width: 100%;
 }
 
 .organisations-relations .for_publications .portal_navigator_top {
   float: left;
   width: 100%;
+}
+
+table.properties>tbody>tr:hover {
+    background-color: #f5f5f5;
+}
+
+.organisations-relations table.properties td {
+  padding-bottom: 8px;
+}
+.organisations-relations table.properties tr>td:nth-child(1),
+.organisations-relations table.properties tr>td:nth-child(2) {
+  padding-right: 5px;
 }
