--- a/docs/assets/css/doctypes/publikationsliste.css
+++ b/docs/assets/css/doctypes/publikationsliste.css
@@ -69,7 +69,7 @@ ol.portal_list li.portal_list_item_group {
 
 span.downloads_count {
   width: 77px;
-  border-bottom: 2px solid #b0adad;
+  border-bottom: 1px solid #b0adad;
 }
 
 li.portal_list_item_most_downloaded div.portal_content_properties {
@@ -168,6 +168,7 @@ table.properties>tbody>tr:hover {
 
 .organisations-relations table.properties td {
   padding-bottom: 8px;
+  background-color: transparent;
 }
 .organisations-relations table.properties tr>td:nth-child(1),
 .organisations-relations table.properties tr>td:nth-child(2) {
