--- a/docs/assets/css/src/docs.css
+++ b/docs/assets/css/src/docs.css
@@ -134,13 +134,14 @@ h2 code, h3 code, h4 code {
 #skippy {
   display: block;
   padding: 1em;
-  color: #fff;
-  background-color: #6f5499;
+  color: initial;
+  background-color: #ddd;
   outline: 0;
 }
 
 #skippy .skiplink-text {
   padding: .5em;
+  background-color: #fff;
   outline: 1px dotted;
 }
 
