--- a/less/ku-login.less
+++ b/less/ku-login.less
@@ -22,6 +22,7 @@
 
   .login-header {
     margin-bottom: 23px;
+    font-size: 18px;
   }
   @media (max-width: @screen-sm-max) {
     [class*="col-"] + [class*="col-"] {
