--- a/less/ku-login.less
+++ b/less/ku-login.less
@@ -4,6 +4,7 @@
   max-width: 450px;
   height: 100%;
   margin: 0 auto;
+  margin-top: 10px;
   @media (min-width: @screen-sm) {
     margin-top: 50px;
   }
@@ -21,8 +22,8 @@
   }
 
   .login-header {
-    margin-bottom: 23px;
-    font-size: 18px;
+    margin-bottom: 20px;
+    line-height: 1.4;
   }
   @media (max-width: @screen-sm-max) {
     [class*="col-"] + [class*="col-"] {
