--- a/less/ku-login.less
+++ b/less/ku-login.less
@@ -23,7 +23,8 @@
 
   .login-header {
     margin-bottom: 20px;
-    line-height: 1.4;
+    line-height: 26px;
+    font-size: 17px;
   }
   @media (max-width: @screen-sm-max) {
     [class*="col-"] + [class*="col-"] {
