--- a/less/ku-slickslider.less
+++ b/less/ku-slickslider.less
@@ -246,7 +246,7 @@
     margin: 0 5px;
     padding: 0;
     cursor: pointer;
-    background: rgba(0, 0, 0, 0.3);
+    background: rgba(@gray-base, 0.3);
     border-radius: 50%;
 
     button {
@@ -281,7 +281,7 @@
   }
 
   .slick-active {
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(@gray-base, 0.5);
     outline: none;
   }
 }
@@ -297,20 +297,21 @@
       display: block;
       position: relative;
       width: 100%;
-      line-height: 1.333333;
+      line-height: @line-height-small;
       padding: 15px;
-      border: 1px solid #ddd;
-      background: rgba(255, 255, 255, 1);
+      border: 1px solid @gray-ddd;
+      background: rgba(@white-color, 1);
 
       h2 {
         margin-top: 0;
+        color: @text-color;
       }
 
       &.text-bottom {
         bottom: 0;
         left: 0;
         color: #252525;
-        background: rgba(255, 255, 255, .7);
+        background: rgba(@white-color, .7);
       }
     }
 
@@ -325,7 +326,7 @@
         bottom: 0;
         left: 0;
         z-index: 2;
-        background: rgba(255, 255, 255, .7);
+        background: rgba(@white-color, .7);
         border: 0;
       }
     }
