--- a/less/ku-slickslider.less
+++ b/less/ku-slickslider.less
@@ -135,6 +135,12 @@
   height: 100%;
   .states(none);
   position: relative;
+  color: @text-color;
+  &:hover {
+    .slide-content {
+      color: @text-color;
+    }
+  }
 }
 
 .slick-arrow.slick-hidden {
