--- a/docs/_includes/nav/css.html
+++ b/docs/_includes/nav/css.html
@@ -41,6 +41,7 @@
     <li><a href="#type-addresses">Addresses</a></li>
     <li><a href="#type-blockquotes">Blockquotes</a></li>
     <li><a href="#type-lists">Lists</a></li>
+    <li><a href="#type-jump-to">Jump to anchor</a></li>
   </ul>
 </li>
 <li>
