--- a/docs/_includes/css/type.html
+++ b/docs/_includes/css/type.html
@@ -459,3 +459,15 @@ You can use the mark tag to <mark>highlight</mark> text.
     <p>Horizontal description lists will truncate terms that are too long to fit in the left column with <code>text-overflow</code>. In narrower viewports, they will change to the default stacked layout.</p>
   </div>
 </div>
+
+<!-- Jump to anchors -->
+<h2 id="type-jump-to">Jump to id</h2>
+<p>Jump to anywhere on a page. To go go another page, add full url followed by the id: <code>https://yourpage.com#id</code></p>
+<div class="bs-example" data-example-id="jump-top">
+  <div class="jump-anywhere">
+    <a class="jump-to" title="Jump" href="#type">Jump</a>
+  </div>
+</div>
+{% highlight html %}
+<a class="jump-to" title="Jump" href="#type">Jump</a>
+{% endhighlight %}
