--- a/less/buttons.less
+++ b/less/buttons.less
@@ -69,6 +69,8 @@
 
 .btn-default {
   .button-variant(@btn-default-color; @btn-default-bg; @btn-default-border);
+  font-weight: 600;
+  text-transform: uppercase;
 }
 
 .btn-primary {
