--- a/docs/_includes/nav/javascript.html
+++ b/docs/_includes/nav/javascript.html
@@ -92,7 +92,7 @@
   </ul>
 </li>
 <li>
-  <a href="#collapse">Collapse</a>
+  <a href="#collapse">Collapse / accordions</a>
   <ul class="nav">
     <li><a href="#collapse-example">Example</a></li>
     <li><a href="#collapse-example-accordion">Accordion example</a></li>
