--- a/docs/_includes/js/collapse.html
+++ b/docs/_includes/js/collapse.html
@@ -1,5 +1,5 @@
 <div class="bs-docs-section">
-  <h1 id="collapse" class="page-header">Collapse <small>collapse.js</small></h1>
+  <h1 id="collapse" class="page-header">Collapse / accordions <small>collapse.js</small></h1>
 
   <p class="lead">Flexible plugin that utilizes a handful of classes for easy toggle behavior.</p>
 
