--- a/less/ku-misc.less
+++ b/less/ku-misc.less
@@ -362,44 +362,21 @@ nav {
   font-size: 0;
   display: block;
   position: relative;
-  color: @text-color;
-  .glyphicon-link;
+  color: @gray-666;
+  .glyphicon-transfer;
 
   &::before {
     .glyphicon;
+    transform: rotate(90deg);
     font-size: 12px;
+    color: inherit;
     padding: 6px;
     border: 1px solid @gray-666;
     border-radius: 50%;
   }
-
-  &::after {
-    display: inline-block;
-    position: absolute!important;
-    top: 15px!important;
-    left: 15px;
-    font-size: 12px;
-    text-align: center;
-    padding-left: 1px;
-    content: "#";
-    color: #fff;
-    background-color: #d54e21;
-    height: 16px;
-    width: 16px;
-    border-radius: 50px;
-  }
-
   &:active,
   &:hover {
     color: inherit;
-
-    &::after {
-      .glyphicon;
-      //content: "\e093";
-      content:"\e178";
-      padding-top: 2px;
-      transform: rotate(90deg);
-    }
   }
 }
 // KU: For legacy html: Should be removed
