--- a/less/faculties/faelles.less
+++ b/less/faculties/faelles.less
@@ -296,3 +296,48 @@
     }
   }
 }
+// Slick slider colors
+
+.slideshow {
+  .slick-current {
+    .faculty_color {
+      background: @ku-red;
+      color: @white-color;
+      @media (min-width: @screen-sm) {
+        background: fade(@ku-red, 83%);
+      }
+    }
+
+    .subcolor_1 {
+      background: @blue;
+      color: @white-color;
+      @media (min-width: @screen-sm) {
+        background: fade(@blue, 83%);
+      }
+    }
+
+    .subcolor_2 {
+      background: @green;
+      color: @white-color;
+      @media (min-width: @screen-sm) {
+        background: fade(@green, 83%);
+      }
+    }
+
+    .subcolor_3 {
+      background: @ku-darkgray;
+      color: @white-color;
+      @media (min-width: @screen-sm) {
+        background: fade(@ku-darkgray, 83%);
+      }
+    }
+
+    .subcolor_4 {
+      background: @ku-darkblue;
+      color: @white-color;
+      @media (min-width: @screen-sm) {
+        background: fade(@ku-darkblue, 83%);
+      }
+    }
+  }
+}
