--- a/less/faculties/jur.less
+++ b/less/faculties/jur.less
@@ -299,3 +299,49 @@
     }
   }
 }
+
+// Slick slider colors
+
+.slideshow {
+  .slick-current {
+    .faculty_color {
+      background: @jura;
+      color: @white-color;
+      @media (min-width: @screen-sm) {
+        background: fade(@jura, 83%);
+      }
+    }
+
+    .subcolor_1 {
+      background: @jura-sub_1;
+      color: @white-color;
+      @media (min-width: @screen-sm) {
+        background: fade(@jura-sub_1, 83%);
+      }
+    }
+
+    .subcolor_2 {
+      background: @jura-sub_2;
+      color: @white-color;
+      @media (min-width: @screen-sm) {
+        background: fade(@jura-sub_2, 83%);
+      }
+    }
+
+    .subcolor_3 {
+      background: @jura-sub_3;
+      color: @white-color;
+      @media (min-width: @screen-sm) {
+        background: fade(@jura-sub_3, 83%);
+      }
+    }
+
+    .subcolor_4 {
+      background: @jura-sub_4;
+      color: @white-color;
+      @media (min-width: @screen-sm) {
+        background: fade(@jura-sub_4, 83%);
+      }
+    }
+  }
+}
