--- a/less/faculties/science.less
+++ b/less/faculties/science.less
@@ -296,3 +296,49 @@
     }
   }
 }
+
+// Slick slider colors
+
+.slideshow {
+  .slick-current {
+    .faculty_color {
+      background: @science;
+      color: @white-color;
+      @media (min-width: @screen-sm) {
+        background: fade(@science, 83%);
+      }
+    }
+
+    .subcolor_1 {
+      background: @science-sub_1;
+      color: @white-color;
+      @media (min-width: @screen-sm) {
+        background: fade(@science-sub_1, 83%);
+      }
+    }
+
+    .subcolor_2 {
+      background: @science-sub_2;
+      color: @white-color;
+      @media (min-width: @screen-sm) {
+        background: fade(@science-sub_2, 83%);
+      }
+    }
+
+    .subcolor_3 {
+      background: @science-sub_3;
+      color: @white-color;
+      @media (min-width: @screen-sm) {
+        background: fade(@science-sub_3, 83%);
+      }
+    }
+
+    .subcolor_4 {
+      background: @science-sub_4;
+      color: @white-color;
+      @media (min-width: @screen-sm) {
+        background: fade(@hum-sub_4, 83%);
+      }
+    }
+  }
+}
