--- a/less/faculties/sund.less
+++ b/less/faculties/sund.less
@@ -296,3 +296,47 @@
     }
   }
 }
+
+.slideshow {
+  .slick-current {
+    .faculty_color {
+      background: @sund;
+      color: @white-color;
+      @media (min-width: @screen-sm) {
+        background: fade(@sund, 83%);
+      }
+    }
+
+    .subcolor_1 {
+      background: @sund-sub_1;
+      color: @white-color;
+      @media (min-width: @screen-sm) {
+        background: fade(@sund-sub_1, 83%);
+      }
+    }
+
+    .subcolor_2 {
+      background: @sund-sub_2;
+      color: @white-color;
+      @media (min-width: @screen-sm) {
+        background: fade(@sund-sub_2, 83%);
+      }
+    }
+
+    .subcolor_3 {
+      background: @sund-sub_3;
+      color: @white-color;
+      @media (min-width: @screen-sm) {
+        background: fade(@sund-sub_3, 83%);
+      }
+    }
+
+    .subcolor_4 {
+      background: @sund-sub_4;
+      color: @white-color;
+      @media (min-width: @screen-sm) {
+        background: fade(@sund-sub_4, 83%);
+      }
+    }
+  }
+}
