--- a/less/code.less
+++ b/less/code.less
@@ -42,7 +42,7 @@ pre {
   display: block;
   padding: ((@line-height-computed - 1) / 2)!important; // Overriding prettyprint.js
   margin: 0 0 (@line-height-computed / 2);
-  //font-size: (@font-size-base - 1); // 14px to 13px
+  font-size: @font-size-base;
   white-space: pre-wrap;
   line-height: @line-height-base;
   word-break: break-all;
