--- a/less/ku-slickslider.less
+++ b/less/ku-slickslider.less
@@ -152,7 +152,7 @@
 // Links
 
 .slide-link {
-  display: inline-flex!important;
+  display: flex!important;
   flex-direction: column;
   justify-content: center;
   height: 100%;
@@ -260,7 +260,7 @@
 
 .slick-dots {
   position: absolute;
-  bottom: 10px;
+  bottom: 5px;
   display: block;
   width: 100%;
   padding: 0;
@@ -271,9 +271,9 @@
   li {
     position: relative;
     display: inline-block;
-    width: 8px;
-    height: 8px;
-    margin: 0 5px;
+    width: 6px;
+    height: 6px;
+    margin: 0 4px;
     padding: 0;
     cursor: pointer;
     background: rgba(@gray-base, 0.3);
@@ -335,6 +335,7 @@
 
       h2 {
         margin-top: 0;
+        margin-bottom: 5px;
         color: inherit;
       }
 
